--- a/Progress.HTML
+++ b/Progress.HTML
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .red-button{
+            background-color: red;
+            color:white;
+            border: none;
+        }
+    </style>
 </head>
 <body>
     
+    <button title="Good Job" class="red-button">
+        hello
+    </button>
+
+    <p>
+        paragraph here is <button class="red-button">Click me!</button></p>
+    </p>
+
 </body>
 </html>
