--- a/Variables.HTML
+++ b/Variables.HTML
@@ -7,12 +7,11 @@
 </head>
 <body>
     <script>
-        let X = 20;
-        console.log(X);
+      let name = "Kyle";
+      let add = 2 + 2;
+      let result = add + 20;
 
-        let compute = 50 +50;
-        console.log(compute);
-        console.log(compute + 50);
+        console.log(name + " " + result);
     </script>
 </body>
 </html>
