--- a/Cart.HTML
+++ b/Cart.HTML
@@ -8,13 +8,13 @@
 <body>
     <button onclick="console.log(`storage is: ${Count}`)">Cart Quantity</button>
 
-    <button onclick="Count = Count + 1;
+    <button onclick="Count += 1;
     console.log(`Storage is ${Count}`)">Add</button>
     
-    <button onclick="Count = Count + 2;
+    <button onclick="Count += 2;
     console.log(`Storage is ${Count}`)">Add 2</button>
 
-    <button onclick="Count = Count = 0;
+    <button onclick="Count = 0;
     console.log(`Storage is ${Count}`)">Reset</button>
 
     <script>
