--- a/Functions.HTML
+++ b/Functions.HTML
@@ -11,14 +11,16 @@
 
         <script>
 
+            const better = 50;
+
         function check(){
-            if (2 > 3){
-                console.log("GYMSHARK!!!");
+            if (better > 3){
+               alert("GYMSHARK!!!");
             }else{
-                console.log("NOOOO!!!");
+                alert("NOOOO!!!");
             }
         }
-        
+
     </script>
 
 </body>
